src/test/ui/self/elision/ref-mut-struct-async.nll.stderr
error: lifetime may not live long enough
  --> $DIR/ref-mut-struct-async.rs:13:9
   |
LL |     async fn ref_Struct(self: &mut Struct, f: &u32) -> &u32 {
   |                               -               - let's call the lifetime of this reference `'1`
   |                               |
   |                               let's call the lifetime of this reference `'2`
LL |         f
   |         ^ function was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`

error: lifetime may not live long enough
  --> $DIR/ref-mut-struct-async.rs:17:9
   |
LL |     async fn box_ref_Struct(self: Box<&mut Struct>, f: &u32) -> &u32 {
   |                                       -                - let's call the lifetime of this reference `'1`
   |                                       |
   |                                       let's call the lifetime of this reference `'2`
LL |         f
   |         ^ function was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`

error: lifetime may not live long enough
  --> $DIR/ref-mut-struct-async.rs:21:9
   |
LL |     async fn pin_ref_Struct(self: Pin<&mut Struct>, f: &u32) -> &u32 {
   |                                       -                - let's call the lifetime of this reference `'1`
   |                                       |
   |                                       let's call the lifetime of this reference `'2`
LL |         f
   |         ^ function was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`

error: lifetime may not live long enough
  --> $DIR/ref-mut-struct-async.rs:25:9
   |
LL |     async fn box_box_ref_Struct(self: Box<Box<&mut Struct>>, f: &u32) -> &u32 {
   |                                               -                 - let's call the lifetime of this reference `'1`
   |                                               |
   |                                               let's call the lifetime of this reference `'2`
LL |         f
   |         ^ function was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`

error: lifetime may not live long enough
  --> $DIR/ref-mut-struct-async.rs:29:9
   |
LL |     async fn box_pin_ref_Struct(self: Box<Pin<&mut Struct>>, f: &u32) -> &u32 {
   |                                               -                 - let's call the lifetime of this reference `'1`
   |                                               |
   |                                               let's call the lifetime of this reference `'2`
LL |         f
   |         ^ function was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`

error: aborting due to 5 previous errors

